k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-backend
  namespace: enterprise-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:

      - name: backend

        image: fastapi-backend:latest

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:

          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:

          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 15
          periodSeconds: 20
